; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/scripts/kconfig/extr_symbol.c_sym_init.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/scripts/kconfig/extr_symbol.c_sym_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.symbol = type { i32, i32 }
%struct.utsname = type { i32 }

@sym_init.inited = internal global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"UNAME_RELEASE\00", align 1
@S_STRING = common dso_local global i32 0, align 4
@SYMBOL_AUTO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sym_init() #0 {
  %1 = alloca %struct.symbol*, align 8
  %2 = alloca %struct.utsname, align 4
  %3 = load i32, i32* @sym_init.inited, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %5, label %6

5:                                                ; preds = %0
  br label %21

6:                                                ; preds = %0
  store i32 1, i32* @sym_init.inited, align 4
  %7 = call i32 @uname(%struct.utsname* %2)
  %8 = call %struct.symbol* @sym_lookup(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i32 0)
  store %struct.symbol* %8, %struct.symbol** %1, align 8
  %9 = load i32, i32* @S_STRING, align 4
  %10 = load %struct.symbol*, %struct.symbol** %1, align 8
  %11 = getelementptr inbounds %struct.symbol, %struct.symbol* %10, i32 0, i32 1
  store i32 %9, i32* %11, align 4
  %12 = load i32, i32* @SYMBOL_AUTO, align 4
  %13 = load %struct.symbol*, %struct.symbol** %1, align 8
  %14 = getelementptr inbounds %struct.symbol, %struct.symbol* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = or i32 %15, %12
  store i32 %16, i32* %14, align 4
  %17 = load %struct.symbol*, %struct.symbol** %1, align 8
  %18 = getelementptr inbounds %struct.utsname, %struct.utsname* %2, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @sym_add_default(%struct.symbol* %17, i32 %19)
  br label %21

21:                                               ; preds = %6, %5
  ret void
}

declare dso_local i32 @uname(%struct.utsname*) #1

declare dso_local %struct.symbol* @sym_lookup(i8*, i32) #1

declare dso_local i32 @sym_add_default(%struct.symbol*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
